--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
+    "jest": "^29.3.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
